--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,7 @@ body {
   margin-left: 15px;
   margin-top: 15px;
   border-radius: 4px;
-  border-color: darkblue;
+  border-color: blue;
 }
 
 .country-list {
